Update on Overleaf.

--- a/Appendix3/appendix3.tex
+++ b/Appendix3/appendix3.tex
@@ -115,7 +115,7 @@ true && {false; true} && echo "Reaches here"
 echo "SUXXESS" | { tr X C && echo "Finished transform"} | tee /dev/null
 \end{lstlisting}
 \caption[Shell Command Grouping]{Shows command grouping being used in the definition of a function, a conditional list and in a pipe.
-\label{lst:arith-node-interface}}
+\label{lst:command-grouping}}
 \end{figure}
 
 \lstinputlisting[language=c,caption={
