Update on Overleaf.

--- a/Appendix3/appendix3.tex
+++ b/Appendix3/appendix3.tex
@@ -122,3 +122,14 @@ echo "SUXXESS" | { tr X C && echo "Finished transform"} | tee /dev/null
 [dash - evaltree]
 The dispatch functions for evaluation of nodes in dash. Particularly confusing sections include the use of bit flags in the NAND/NOR/NSEMI case.
 \label{lst:dash-evaltree}}]{Appendix3/evaltree.c}
+
+\lstinputlisting[language=json,caption={
+[AST for a simple if statement]
+a
+\label{lst:if-ast}}]{Appendix3/AST-if.txt}
+
+
+
+
+
+
