--- a/Appendix3/appendix3.tex
+++ b/Appendix3/appendix3.tex
@@ -133,16 +133,15 @@ The dispatch functions for evaluation of nodes in dash. Particularly confusing s
 \begin{lstlisting}[frame=tb]
 if false; then
     $noop
-elif true; then
-    A="SUCCESS 5"
+else
+    A="SUCCESS"
 fi
 \end{lstlisting}
-\caption[Code for a ]{Shows command grouping being used in the definition of a function, a conditional list and in a pipe.
-\label{lst:if-ast-1}}
+\caption[Code for a simple if statement]{Shell code for an if statement. 'A' and 'noop' are previously set. The value of A is checked after the statement to ensure the code operated correctly.\label{lst:if-ast-1}}
 \end{figure}
 
 \begin{figure}[h]
-\lstinputlisting[language=json,caption={
+\lstinputlisting[caption={
 [AST for a simple if statement]
 The AST produced for the code in~\ref{lst:if-ast-1}. 
 \label{lst:if-ast-2}}]{Appendix3/AST-if.txt}
