--- a/dissertation.tex
+++ b/dissertation.tex
@@ -41,6 +41,11 @@
 \lstset{%
 	tabsize=2,
     basicstyle=\small,
+    stringstyle=\color{blue},
+    keywordstyle=\color{red},
+    numbers=left,
+    numbersep=5pt,
+    showstringspaces=false, 
     frame=tb
 }
 \usepackage{mdwlist}
@@ -51,6 +56,7 @@
     citecolor={blue!70!black},
     urlcolor={blue!80!black}
 }
+\usepackage{listings-golang}
 
 \begin{document}
 
